kube/collaborator/collaborator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: collaborator
  name: collaborator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collaborator
  template:
    metadata:
      labels:
        app: collaborator
    spec:
      containers:
        - env:
            - name: ACCOUNTS_URL
              value: http://account
            - name: COLLABORATOR_PORT
              value: "3078"
            - name: MINIO_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: MINIO_ACCESS_KEY
            - name: MINIO_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: MINIO_ENDPOINT
            - name: MINIO_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: MINIO_SECRET_KEY
            - name: MONGO_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: MONGO_URL
            - name: SECRET
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: SERVER_SECRET
          image: getyoutrack/collaborator:latest
          name: collaborator
          ports:
            - containerPort: 3078
          resources:
            limits:
              memory: '512M'
      restartPolicy: Always
