kube/collaborator/collaborator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: collaborator
  name: collaborator
spec:
  ingressClassName: nginx
  rules:
    - host: collaborator.glint.example
      http:
        paths:
          - backend:
              service:
                name: collaborator
                port:
                  number: 80
            path: /
            pathType: Prefix
